--- a/package.json
+++ b/package.json
@@ -8,8 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.2.1",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "echarts": "^4.9.0",
+    "element-ui": "^2.15.12",
+    "js-cookie": "^3.0.1",
+    "less": "^4.1.2",
+    "less-loader": "^6.0.0",
+    "v-charts": "^1.19.0",
+    "vue": "^2.6.14",
+    "vue-router": "^3.6.5",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -33,7 +42,9 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {
+      "no-unused-vars": "off"
+    }
   },
   "browserslist": [
     "> 1%",
